# karamel

./: .clang-format  .gitattributes  .gitignore  .merlin  .odocl  .travis.yml  CI.md  Changes.md  DESIGN.md  LICENSE  LICENSE-MIT  MANUAL.md  Makefile  Makefile.common  README.md  Tests.ml  _tags  build_local.ps1  build_local.sh  dune-project  flake.nix  karamel.opam  kremlin.opam  myocamlbuild.ml  test.c  visitors.mk
.ci/: before_install.sh  install.sh  script.sh
.docker/: build.sh  hierarchic.Dockerfile  standalone.Dockerfile
.docker/linux/: Dockerfile
.github/policies/: cla.yml
.github/workflows/: ci.yml  dockerimage.yml  linux-x64-hierarchic.yaml  linux-x64.yaml  sync-krmllib-dist.yml
.nix/: karamel.nix
.scripts/: publish_tutorial.sh
book/: AdvancedTips.rst  AdvancedTopics.rst  BufferLibraries.rst  Core.rst  DataStructures.rst  ExampleMemCpy.rst  GettingStarted.md  Introduction.fst  Introduction.rst  Libraries.rst  LinkedList4.fst  LowStar.fst  Makefile  MoreLibraries.rst  README.md  RingBuffer.fst  Setup.rst  StringManipulation.rst  TocExamples.rst  TocLibraries.rst  Toy.rst  conf.py  fst2rst.ml  index.rst  introduction.fst  introduction.fst.hints  make.bat
book/notfslit/: Intro.fst  README
book/tutorial/: .gitignore  Impl.Bignum.Lemmas.fst  Impl.Bignum.fst  Makefile  Makefile.include  Spec.Bignum.fst  Spec.Test.fst
examples/json/: JSONParser.Impl.fst  JSONParser.Spec.fst  test.fst
include/: kremlib.h  krmllib.h
include/kremlin/: c.h  c_endianness.h  c_string.h  fstar_dyn.h  fstar_int.h  fstar_ints.h  fstar_uint128.h  fstar_uint128_builtin.h  fstar_uint128_msvc.h  lowstar_endianness.h  prims_int.h  prims_string.h
include/krml/: lowstar_endianness.h  steel_types.h
kremlib/: .gitignore  C.Endianness.fst  C.Endianness.fst.hints  C.Failure.fst  C.Failure.fst.hints  C.Loops.fst  C.Loops.fst.hints  C.Nullity.fsti  C.String.fst  C.String.fst.hints  C.String.fsti  C.String.fsti.hints  C.fst  C.fst.hints  C.fsti  C.ml  FStar.Endianness.fst  FStar.Kremlin.Endianness.fst  FStar.Kremlin.Endianness.fst.hints  FStar_UInt128_MSVC.c  LowStar.Lib.AssocList.fst  LowStar.Lib.AssocList.fsti  LowStar.Lib.AssocListFunctor.fsti  LowStar.Lib.LinkedList.fst  LowStar.Lib.LinkedList2.fst  LowStar.LinkedList.fst  Makefile  README.md  Spec.Loops.fst  Spec.Loops.fst.hints  TestLib.fsti  TestLib.fsti.hints  TestLib.ml  copyright-header.txt  custom128.c  dune  gcc_compat.h  krembytes.h  kremdate.c  kremints.h  (+10 more)
kremlib/c/: c.c  c_string.c  fstar_bytes.c  fstar_char.c  fstar_date.c  fstar_dyn.c  fstar_hyperstack_io.c  fstar_int16.c  fstar_int32.c  fstar_int64.c  fstar_int8.c  fstar_int_cast.c  fstar_io.c  fstar_string.c  fstar_uint128.c  fstar_uint128_gcc64.h  fstar_uint128_msvc.c  fstar_uint128_msvc.h  fstar_uint16.c  fstar_uint16.h  fstar_uint32.c  fstar_uint32.h  fstar_uint64.c  fstar_uint64.h  fstar_uint8.c  fstar_uint8.h  lowstar_printf.c  prims.c  testlib.c
kremlib/compat/: C.Compat.Endianness.fst  C.Compat.Loops.fst  C.Compat.String.fst  C.Compat.fst  C.Loops.fst  C.Nullity.fsti.hints  C.String.fst  C.String.fst.hints  FStar.Kremlin.Endianness.fst.hints  README.md  Spec.Compat.Loops.fst  Spec.Loops.fst  Spec.Loops.fst.hints  TestLib.Compat.fsti  TestLib.fsti  TestLib.fsti.hints
kremlib/fst/: C.Endianness.fst  C.Loops.fst  C.fst  TestLib.fsti
kremlib/hints/: C.Endianness.fst.hints  C.Failure.fst.hints  C.Loops.fst.hints  C.String.fst.hints  (+9 more)
krmllib/: .gitignore  C.Endianness.fst  C.Failure.fst  C.Loops.fst  C.RefAsArray.fst  C.String.fst  C.String.fsti  C.fst  C.ml  FStar.Krml.Endianness.fst  LowStar.Lib.AssocList.fst  LowStar.Lib.AssocList.fsti  LowStar.Lib.LinkedList2.fst  Makefile  README.md  TestLib.fsti  copyright-header.txt  dune  dune-project
lib/: Ansi.ml  Ast.ml  AstToCFlat.ml  AstToCStar.ml  AstToMiniRust.ml  Atom.ml  Builtin.ml  Bundle.ml  Bundles.ml  C11.ml  CFlat.ml  CFlatToWasm.ml  CStar.ml  CStarToC11.ml  Checker.ml  ClangToAst.ml  Common.ml  Constant.ml  DataTypes.ml  DeBruijn.ml  Diagnostics.ml  Driver.ml  Drop.ml  Error.ml  Flags.ml  GcTypes.ml  GenCtypes.ml  GenCtypes.mli  GlobalNames.ml  GlobalNames.mli  GotoForEarlyReturn.ml  Helpers.ml  HoistLocals.ml  Idents.ml  InitializeLocals.ml  Inlining.ml  InputAst.ml  InputAstToAst.ml  InputConstant.ml  KList.ml  (+32 more)
lib/lib/: KList.ml  Utils.ml
lib/parser/: KParser.mly  dune
misc/: Makefile.basic  cl-wrapper.bat
parser/: KLexer.ml  Lexer.ml  kparser.mly  parser.mly
runtime/: WasmSupport.fst  WasmSupport.fst.hints
src/: .gitignore  Ast.ml  AstToC.ml  AstToCFlat.ml  AstToCStar.ml  Atom.ml  Atom.mli  AutoConfig.ml  Builtin.ml  Bundle.ml  Bundles.ml  C.ml  C11.ml  CFlat.ml  CFlatToWasm.ml  CMinor.ml  CMinorToWasm.ml  CStar.ml  CStarToC.ml  CStarToC11.ml  CStarToCFlat.ml  CStarToCMinor.ml  CStarToWasm.ml  CallingConvention.ml  Checker.ml  Common.ml  Constant.ml  DataTypes.ml  DeBruijn.ml  Diagnostics.ml  Driver.ml  Drop.ml  Error.ml  Flags.ml  Frames.ml  GcTypes.ml  GenCtypes.ml  GenCtypes.mli  GlobalNames.ml  GlobalNames.mli  (+34 more)
src/parser/: KParser.mly  dune
test/: .gitignore  01chacha.c  Abbrev.fst  Abbrev.fst.hints  Abstract.fsti  AbstractStruct.fst  AbstractStruct2.fst  AbstractStruct2.fsti  AbstractStructAbstract.fst  AbstractStructAbstract.fsti  AbstractStructParameter.fsti  AggressiveInline.fst  AllocFree.fst  AssocList.fst  AssocList.fst.hints  Attributes.fst  Attributes.fst.hints  BadFolding.fst  BadMatch.fst  BadMatch.fst.hints  BlitNull.fst  C89.fst  Chacha01.fst  CheckedInt.fst  ColoredRegion.fst  Comment.fst  Const.fst  ConstBuffer.fst  Ctypes1.fst  Ctypes2.fst  Ctypes3.fst  Ctypes4.fst  CustomEq.fst  CustomEq.fst.hints  DataTypes.fst  DataTypes.fst.hints  DataTypesEq.fst  DataTypesMut.fst  DataTypesSimple.fst  DataTypesSimple.fst.hints  (+244 more)
test/ctypes/: Client.ml  Gen_stubs.ml  Lowlevel.fst  Makefile  _tags  dune  myocamlbuild.ml
test/ctypes/lib/: dune
test/ctypes/lib_gen/: dune
verified/: common.lean  cstar.lean  cstar_semantics.lean  leanpkg.toml  lowstar.lean  lowstar_semantics.lean  lowstar_to_cstar.lean  lowstar_to_cstar_proof.lean  semantics_common.lean  transition.lean
(+441 files in other folders)
