(include_subdirs unqualified)

(executable
  (name kremlin)
  (libraries
    ppx_deriving.std
    ppx_deriving_yojson
    zarith
    pprint
    unix
    menhirLib
    sedlex
    process
    fix
    wasm
    visitors.ppx
    visitors.runtime
    sedlex.ppx
  )
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson sedlex.ppx visitors.ppx)
  )
  (flags (:standard -warn-error -A -w @1-2-3@8..12@14..21@23..29-30@31..38-39-40-41@43@57))
)
