(include_subdirs unqualified)

(executable
  (name Karamel)
  (libraries
    ppx_deriving.std
    ppx_deriving_yojson
    zarith
    pprint
    unix
    menhirLib
    sedlex
    process
    fix
    wasm
    visitors.ppx
    visitors.runtime
    sedlex.ppx
  )
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson sedlex.ppx visitors.ppx)
  )
; Reinstate @39 once https://github.com/whitequark/ppx_deriving_yojson/issues/21
; is fixed
; Reinstate @3 once we move to 4.03.0
; VD: Fix @40 (only really needed for GenCtypes.ml)
  (flags (:standard -warn-error -A -w @1-2-3-7@8..12@14..21@23..29-30@31..38-39-40-41@43@57))
)
