(executable
  (name Ctypes1_gen)
  (modules Ctypes1_gen)
  (libraries
    ctypes.stubs
    Ctypes1_bindings
  )
  (link_flags "-linkall")
)

(executable
  (name Lowlevel_gen)
  (modules Lowlevel_gen)
  (libraries
    ctypes.stubs
    Lowlevel_bindings
  )
  (link_flags "-linkall")
)

(executable
  (name Ctypes2_gen)
  (modules Ctypes2_gen)
  (libraries
    ctypes.stubs
    Ctypes2_bindings
  )
  (link_flags "-linkall")
)
